# NRC

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
cmake_files/: download.cmake
headers/Core/: CORE_info.h  main.h  settings.h
headers/Core/command/: command_parser.h  command_sender.h  command_structs.h  commands.h  handler_commands.h
headers/Core/experimental/: event_manager.h  process.h  run_js_code.h  run_js_code_functions.h  run_js_code_utils.h
headers/Core/filesystem/: nrfs.h  pseudo_fs.h
headers/Core/modules/: module_base.h  module_metadata.h
headers/Core/other/: utils.h  variable_type_enum.h  variables.h  versionc.h
headers/Core/print/: gprint.h  print.h  print_tools.h  printable.h
headers/Core/users/: OOBE.h  user.h  user_manager.h  user_permissions_enum.h
headers/Core/utils/: language_util.h  other_util.h  string_util.h
headers/OS/other/: commands.hpp  events.hpp  pfs.hpp  vars.hpp
source/: main.cpp
source/Core/: CMakeLists.txt  CORE_info.h  Fix.cpp  core.cpp
source/Core/base/: HandlerCommands.cpp  commands.cpp  print.cpp
source/Core/base/command/: HandlerCommands.cpp  commands.cpp
source/Core/data/: data_manager.cpp  file_manager.cpp
source/Core/extra/: VectorTools.cpp  modules_manager.cpp  time_tools.cpp  variables.cpp
source/Core/filesystem/: data_manager.cpp  pseudo_fs.cpp
source/Core/src/: main.cpp
source/Core/src/command/: command_parser.cpp  command_sender.cpp  handler_commands.cpp
source/Core/src/command/commands_functions/: commands_utils.cpp  filesystem_commands.cpp  other_commands.cpp  user_manager_commands.cpp
source/Core/src/experimental/: event_manager.cpp  process.cpp  run_js_code.cpp  run_js_code_utils.cpp
source/Core/src/experimental/js_code_native_functions/: other_functions.cpp  pseudo_filesystem_functions.cpp  simple_filesystem_functions.cpp  user_manager_functions.cpp
source/Core/src/filesystem/: nrfs.cpp  pseudo_fs.cpp
source/Core/src/modules/: module_base.cpp
source/Core/src/other/: fix.cpp  gprint.cpp  print.cpp  utils.cpp  variables.cpp
source/Core/src/users/: OOBE.cpp  permissions_enum_class.cpp  user.cpp  user_manager.cpp
source/Core/src/utils/: language_util.cpp  other_util.cpp  string_util.cpp
source/Core/users/: OOBE.cpp  user_manager.cpp
source/OS/: CMakeLists.txt  os_main.cpp
source/OS/src/: main.cpp  os_main.cpp
tests/src/: command_parser.cc  disk.cc
